--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,9 +20,9 @@
 
     <TextView
         android:padding="10dp"
-        android:id="@+id/tv_start"
+        android:id="@+id/tv_stop"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="start Hago"/>
+        android:text="stop monitor"/>
 
 </LinearLayout>
