--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,34 +2,48 @@
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:orientation="vertical"
+    android:layout_height="match_parent"
     android:gravity="center"
-    android:layout_height="match_parent">
+    android:orientation="vertical">
 
     <TextView
-        android:padding="10dp"
         android:id="@+id/tv_state"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true" />
 
-    <TextView
-        android:padding="10dp"
-        android:id="@+id/tv_step"
+    <LinearLayout
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="20dp"
+        android:orientation="horizontal">
 
-    <TextView
-        android:padding="10dp"
+        <TextView
+            android:id="@+id/tv_apk"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+
+        <TextView
+            android:id="@+id/tv_step"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="20dp"
+            />
+    </LinearLayout>
+
+
+    <Button
+        android:layout_marginTop="10dp"
         android:id="@+id/tv_start"
-        android:layout_width="wrap_content"
+        android:layout_width="160dp"
         android:layout_height="wrap_content"
-        android:text="start monitor"/>
+        android:text="开始自动化测试" />
 
-    <TextView
-        android:padding="10dp"
-        android:id="@+id/tv_stop"
-        android:layout_width="wrap_content"
+    <Button
+        android:id="@+id/tv_target"
+        android:layout_width="160dp"
         android:layout_height="wrap_content"
-        android:text="stop monitor"/>
-
+        android:layout_marginTop="10dp"
+        android:text="指定包测试" />
 </LinearLayout>
