--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -46,4 +46,11 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
         android:text="指定包测试" />
+
+    <Button
+        android:id="@+id/tv_result"
+        android:layout_width="160dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:text="查看结果" />
 </LinearLayout>
