--- a/app/src/main/res/xml/accessibility_service_config.xml
+++ b/app/src/main/res/xml/accessibility_service_config.xml
@@ -4,5 +4,5 @@
     android:accessibilityFlags="flagDefault"
     android:canRetrieveWindowContent="true"
     android:description="@string/desc"
-    android:packageNames="com.android.packageinstaller,com.yy.hiyo"
+    android:packageNames="com.android.packageinstaller,com.yy.hiyo,com.android.settings"
     />
