完成自动化和指定包测试逻辑

--- a/app/src/main/res/layout/item_result_view.xml
+++ b/app/src/main/res/layout/item_result_view.xml
@@ -13,6 +13,7 @@
         android:layout_height="wrap_content" />
 
     <TextView
+        android:layout_marginTop="10dp"
         tools:text="版本: 3729"
         android:layout_below="@id/tv_branch"
         android:id="@+id/tv_version"
